# firecracker

./: CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  bench_jail.sh  bitcode.patch  kvm-bindings.patch  make_mounts.sh  parse_jail_bench.py  vm-allocator.patch  vmm-sys-util.patch
.buildkite/: common.py  pipeline_cross.py  pipeline_perf.py  pipeline_pr.py  pipeline_rust_test.py
docs/: device-api.md  pmem.md  vfio.md
resources/: rebuild.sh
resources/guest_configs/: ci.config  microvm-kernel-ci-aarch64-6.1.config  microvm-kernel-ci-x86_64-6.1.config
resources/seccomp/: aarch64-unknown-linux-musl.json  x86_64-unknown-linux-musl.json
src/cpu-template-helper/: Cargo.toml
src/firecracker/: Cargo.toml  build.rs
src/firecracker/src/: main.rs  (+2 more)
src/integration_tests/: Cargo.toml
src/integration_tests/src/: block.rs  lib.rs  net.rs
src/integration_tests/src/function/: api.rs
src/integration_tests/src/performance/: block.rs  mod.rs  net.rs
src/jailer/: Cargo.toml
src/jailer_caps/: Cargo.toml
src/pci/: Cargo.toml
src/seccompiler/: Cargo.toml
src/vfio_info/: Cargo.toml
src/vmm/: Cargo.toml
tests/: README.md  conftest.py  parse_rust_results.py  prepare_rust_tests.sh  run_rust_tests.sh  rust_test_config.json
tests/framework/: ab_test.py  artifacts.py  defs.py  http_api.py  microvm.py  utils_fio.py
tests/host_tools/: fcmetrics.py  jailer_bpftrace.txt  memory.py
tests/integration_tests/: test_kani.py
tools/: ab_plot.py  ab_test.py  devtool
tools/ab/: ab_test.py
tools/create_snapshot_artifact/: main.py
tools/devctr/: Dockerfile
(+237 files in other folders)
